fixed compile error after backporting